# indoor-map-lib

./: .gitlab-ci.yml  Cargo.toml  LICENSE
src/: bounding_box.rs  lib.rs  svg_parser.rs  svg_path_parser.rs  svg_room.rs  transform.rs  util.rs
src/map_data/: compiled.rs  mod.rs  uncompiled.rs
tests/json/: repeat_floor_number.json  repeat_vertex_id.json  simple.json  undefined_floor_number_vertex.json  undefined_vertex_id_edge.json  undefined_vertex_id_room.json
