[package]
name = "indoor-map-lib"
version = "0.1.0"
authors = ["nvarner <nathanmvarner@protonmail.com>"]
edition = "2018"

[features]
compile_map_json = ["structopt"]
tile_server = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
svg = "0.9"
nalgebra = "0.27"
anyhow = "1.0"

structopt = { version = "0.3", optional = true }

[dev-dependencies]
common_macros = "0.1"

[[bin]]
name = "compile_map_json"
required-features = ["compile_map_json"]

[[bin]]
name = "tile_server"
required-features = ["tile_server"]
