[package]
name = "indoor-map-lib"
version = "0.1.1"
authors = ["nvarner <nathanmvarner@protonmail.com>"]
edition = "2021"

[features]
compile_map_json = ["structopt"]
svg_splitter = ["structopt"]
map_drawer = ["structopt"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
svg = { git = "https://github.com/nvarner/svg.git", rev = "6986fdb2005a98efa392ea39407d63134dcdc4cd" }
nalgebra = "0.33"
anyhow = "1.0"
structopt = { version = "0.3.26", optional = true }

[dev-dependencies]
common_macros = "0.1"

[[bin]]
name = "compile_map_json"
required-features = ["compile_map_json"]

[[bin]]
name = "svg_splitter"
required-features = ["svg_splitter"]

[[bin]]
name = "map_drawer"
required-features = ["map_drawer"]
